--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+echo "vcd-frontend.rar" >> .gitignore
+echo "vcd_backened.rar" >> .gitignore
+echo "venv/" >> .gitignore
+
+git add .gitignore
+git commit -m "Ignore large files"
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
